feat: Roles and fix caché